--- a/data/unsourced.css
+++ b/data/unsourced.css
@@ -1,4 +1,6 @@
-#unsourced-overlay {
+/* styles for stuff injected into web pages */
+
+#unsrced {
     position: fixed;
     top: 32px;
     left: 32px;
@@ -12,7 +14,7 @@
  * warning label 
  */
 
-#unsourced-overlay .unsourced-label {
+#unsrced .unsrced-label {
   margin: 1em 0;
   padding: 0.5em;
   display: block;
@@ -30,30 +32,72 @@
   -moz-transition: all 0.2s ease-in-out;
 }
 
-#unsourced-overlay .unsourced-label:hover {
+#unsrced .unsrced-label:hover {
   transform: translate3d(0,0,0) rotate(0deg) scale(1.25);
   -webkit-transform: translate3d(0,0,0) rotate(0deg) scale(1.25);
   -moz-transform: translate3d(0,0,0) rotate(0deg) scale(1.25);
 }
 
-#unsourced-overlay .unsourced-label-icon {
+#unsrced .unsrced-label-icon {
   width: 32px;
   height: 32px;
   display: block;
   float: left;
 }
 
-#unsourced-overlay .unsourced-label-bod {
+#unsrced .unsrced-label-bod {
   margin-left: 40px;
 }
 
 
-#unsourced-overlay .unsourced-label-head {
+#unsrced .unsrced-label-head {
   font-size: 120%;
   font-weight: bold;
   display: block;
 }
 
-.highlight {
-    background-color: yellow;
+#unsrced .unsrced-notification {
+    background: #222;
+    /* height: 30px; */
+    /* line-height:30px; */
+    font-size:20px;
+    border-bottom: solid 2px #EEE;
+    padding: 8px 16px;
+    text-align: center;
+    color: white;
+
+    opacity: 0.9;
+/*    -webkit-transition:opacity 1s linear;
+    -moz-transition:opacity 1s linear;
+    transition:opacity 1s linear;
+*/
+
+    -moz-box-sizing: border-box;
+
+    /* properties to "lock" the top bar at the top of the viewport. */
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+
 }
+#unsrced .unsrced-notification a { color: #888; }
+#unsrced .unsrced-notification a:visited { color: #ccc; }
+#unsrced .unsrced-notification a:hover { color: #fff; }
+
+#unsrced .unsrced-close {
+    float: right;
+
+    -moz-box-sizing: border-box;
+    padding: 0 8px;
+    color: white;
+    font-size: 30px;
+    border: 2px solid #222;
+}
+
+#unsrced a.unsrced-close:hover {
+    border-radius: 4px;
+    border: 2px solid #fff;
+/*    background-color: #fff;*/
+}
+
