fix source kind icons in popup box

--- a/data/style.css
+++ b/data/style.css
@@ -75,9 +75,9 @@ a:visited:hover { color: #000; }
 }
 */
 
-.src-paper { background: url(/img/icon-paper.png) no-repeat 0px 8px; }
-.src-pr    { background: url(/img/icon-pr.png) no-repeat 0px 8px; }
-.src-other { background: url(/img/icon-other.png) no-repeat 0px 8px; }
+.src-paper { background: url(icon-paper.png) no-repeat 0px 8px; }
+.src-pr    { background: url(icon-pr.png) no-repeat 0px 8px; }
+.src-other { background: url(icon-other.png) no-repeat 0px 8px; }
 
 
 /****/
