--- a/data/style.css
+++ b/data/style.css
@@ -10,6 +10,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: smaller;
+    background-color: #fff;
     color: #595959;
     min-width: 20em;
 }
@@ -21,6 +22,9 @@ a:visited { color: #000; }
 a:hover { color: #262626; text-decoration: underline; }
 a:visited:hover { color: #000; }
 a:focus { outline: none; }   
+
+h1,h2,h3 { margin-bottom: 0; }
+ul { margin: 0 0; padding 0 0;}
 
 /***************************************
  * LAYOUT
@@ -126,7 +130,7 @@ a:focus { outline: none; }
  */
 .src {
 /*  border-top: 1px dotted #808080; */
-  padding: 0.5em 0.5em 0.5em 20px;
+  padding: 0.3em 0.3em 0.3em 20px;
 }
 
 /*
@@ -340,4 +344,13 @@ header h3 {
     padding: 0.5em;
     background-color: #fff;
 }
+
+
+
+.lookup-status {
+    padding: 0.4em;
+    border-bottom: 2px solid #888;
+    font-size: 120%;
+}
+
 
